apps/gcp/tekton/configs/triggers/event-listeners/http-routes.yaml
# Ref: https://cloud.google.com/kubernetes-engine/docs/how-to/deploying-gateways
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tekton
spec:
  parentRefs:
    - kind: Gateway
      name: external-https
      namespace: infra
  hostnames:
    - prow.tidb.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/tekton/hooks/github(/|$)(.*)"
      backendRefs:
        - name: el-public
          # namespace: ee-cd
          port: 8080
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /$2
    - matches:
        - path:
            type: PathPrefix
            value: "/tekton/dashboard(/|$)(.*)"
      backendRefs:
        - name: tekton-dashboard
          namespace: tekton-pipelines
          port: 9097
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /$2
